<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_title_label"/>

    <EditText
        android:id="@+id/item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_title_hint" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_details_label"/>

    <EditText
        android:id="@+id/item_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_details_hint"/>

    <CheckBox
        android:id="@+id/item_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_found_label"/>

</LinearLayout>